--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
       }
     },
     "rules": {
-      "prettier/prettier": "error"
+      "prettier/prettier": "error",
+      "react/jsx-props-no-spreading": 0,
+      "react/forbid-prop-types": 0
     }
   },
   "eslintIgnore": [
@@ -77,6 +79,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
