--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
